--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,9 @@ http {
 
     resolver 1.1.1.1;
 
+    client_max_body_size          2048m;
+    sendfile                      on;
+
     proxy_connect;
     proxy_connect_allow           443 563;
     proxy_connect_connect_timeout 10s;
