--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     access_log /dev/stdout;
     error_log  /dev/stderr;
 
-    resolver 1.1.1.1;
+    resolver 1.1.1.1 8.8.8.8 114.114.114.114;
 
     client_max_body_size          2048m;
     sendfile                      on;
